{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 108,
  "lineage": "1ef70fb4-2350-eb0f-da10-a20d2ccdbed5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "australia_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026884434d18181fb",
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:elastic-ip/eipalloc-026884434d18181fb",
            "association_id": "eipassoc-028f3ef6c8d6d396e",
            "domain": "vpc",
            "id": "eipalloc-026884434d18181fb",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0017154ad9066eec8",
            "private_dns": "ip-172-22-1-44.ap-southeast-2.compute.internal",
            "private_ip": "172.22.1.44",
            "public_dns": "ec2-13-237-2-230.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.237.2.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "australia_nat"
            },
            "tags_all": {
              "Name": "australia_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "california_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c4e2718878b347d",
            "arn": "arn:aws:ec2:us-west-1:495599735872:elastic-ip/eipalloc-07c4e2718878b347d",
            "domain": "vpc",
            "id": "eipalloc-07c4e2718878b347d",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-183-241-184.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.241.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "california_nat"
            },
            "tags_all": {
              "Name": "california_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hong-kong_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092cde07880195972",
            "arn": "arn:aws:ec2:ap-east-1:495599735872:elastic-ip/eipalloc-092cde07880195972",
            "association_id": "eipassoc-0ab783c29b7e0dc65",
            "domain": "vpc",
            "id": "eipalloc-092cde07880195972",
            "network_border_group": "ap-east-1",
            "network_interface": "eni-0f01359c42ce5d96c",
            "private_dns": "ip-172-23-1-105.ap-east-1.compute.internal",
            "private_ip": "172.23.1.105",
            "public_dns": "ec2-16-163-246-189.ap-east-1.compute.amazonaws.com",
            "public_ip": "16.163.246.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hong-kong_nat"
            },
            "tags_all": {
              "Name": "hong-kong_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "london_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e47f36bfeec263ff",
            "arn": "arn:aws:ec2:eu-west-2:495599735872:elastic-ip/eipalloc-0e47f36bfeec263ff",
            "association_id": "eipassoc-0ebc4cff9239e1495",
            "domain": "vpc",
            "id": "eipalloc-0e47f36bfeec263ff",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-026260ec6eceeba14",
            "private_dns": "ip-172-20-1-39.eu-west-2.compute.internal",
            "private_ip": "172.20.1.39",
            "public_dns": "ec2-3-9-250-190.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.250.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "london_nat"
            },
            "tags_all": {
              "Name": "london_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "new-york_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b641bba3385858d7",
            "arn": "arn:aws:ec2:us-east-1:495599735872:elastic-ip/eipalloc-0b641bba3385858d7",
            "association_id": "eipassoc-0f3b694ebac9be149",
            "domain": "vpc",
            "id": "eipalloc-0b641bba3385858d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03efffa948ecdb1ff",
            "private_dns": "ip-172-19-1-108.ec2.internal",
            "private_ip": "172.19.1.108",
            "public_dns": "ec2-3-227-218-110.compute-1.amazonaws.com",
            "public_ip": "3.227.218.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "new-york_nat"
            },
            "tags_all": {
              "Name": "new-york_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sao-paulo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f995a55edc62879",
            "arn": "arn:aws:ec2:sa-east-1:495599735872:elastic-ip/eipalloc-00f995a55edc62879",
            "association_id": "eipassoc-082e83d0810ae96c8",
            "domain": "vpc",
            "id": "eipalloc-00f995a55edc62879",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0909b3e8ec33f90f4",
            "private_dns": "ip-172-21-1-146.sa-east-1.compute.internal",
            "private_ip": "172.21.1.146",
            "public_dns": "ec2-56-124-7-137.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.124.7.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sao-paulo_nat"
            },
            "tags_all": {
              "Name": "sao-paulo_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d017bbd30085d1f6",
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:elastic-ip/eipalloc-0d017bbd30085d1f6",
            "association_id": "eipassoc-086402e3a852eadf4",
            "domain": "vpc",
            "id": "eipalloc-0d017bbd30085d1f6",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0668e0c9d2f110cac",
            "private_dns": "ip-172-18-1-245.ap-northeast-1.compute.internal",
            "private_ip": "172.18.1.245",
            "public_dns": "ec2-57-181-237-239.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.181.237.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo_nat"
            },
            "tags_all": {
              "Name": "tokyo_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "australia_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:internet-gateway/igw-0b91a306060bc6999",
            "id": "igw-0b91a306060bc6999",
            "owner_id": "495599735872",
            "tags": {
              "Name": "Australia_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "Australia_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "dependencies": [
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "california_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:internet-gateway/igw-0049deb8f081e878a",
            "id": "igw-0049deb8f081e878a",
            "owner_id": "495599735872",
            "tags": {
              "Name": "California_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "California_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "dependencies": [
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hong-kong_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:internet-gateway/igw-005440183ba85d06e",
            "id": "igw-005440183ba85d06e",
            "owner_id": "495599735872",
            "tags": {
              "Name": "HongKong_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "HongKong_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "dependencies": [
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "london_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:internet-gateway/igw-0359f22590e7dff83",
            "id": "igw-0359f22590e7dff83",
            "owner_id": "495599735872",
            "tags": {
              "Name": "London_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "London_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "dependencies": [
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-york_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:internet-gateway/igw-0543af233edcd3d6e",
            "id": "igw-0543af233edcd3d6e",
            "owner_id": "495599735872",
            "tags": {
              "Name": "NewYork_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "NewYork_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "dependencies": [
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sao-paulo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:internet-gateway/igw-006a392c57468cad7",
            "id": "igw-006a392c57468cad7",
            "owner_id": "495599735872",
            "tags": {
              "Name": "SaoPaulo_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "SaoPaulo_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "dependencies": [
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:internet-gateway/igw-08e54b3535b1f83f0",
            "id": "igw-08e54b3535b1f83f0",
            "owner_id": "495599735872",
            "tags": {
              "Name": "Tokyo_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "tags_all": {
              "Name": "Tokyo_IG",
              "Owner": "camorri",
              "Service": "armageddon"
            },
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "dependencies": [
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "australia_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026884434d18181fb",
            "association_id": "eipassoc-028f3ef6c8d6d396e",
            "connectivity_type": "public",
            "id": "nat-0d87fa85eb4710f64",
            "network_interface_id": "eni-0017154ad9066eec8",
            "private_ip": "172.22.1.44",
            "public_ip": "13.237.2.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ca3413a5cbf7b0a",
            "tags": {
              "Name": "australia_nat"
            },
            "tags_all": {
              "Name": "australia_nat"
            }
          },
          "dependencies": [
            "aws_eip.australia_nat",
            "aws_internet_gateway.australia_igw",
            "aws_subnet.australia-a-public",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "california_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c4e2718878b347d",
            "association_id": "eipassoc-0f59498e1d2bd3cee",
            "connectivity_type": "public",
            "id": "nat-0a2f400c4f875e551",
            "network_interface_id": "eni-0f77df85de23a389b",
            "private_ip": "172.24.2.24",
            "public_ip": "54.183.241.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021b3627755c945be",
            "tags": {
              "Name": "california_nat"
            },
            "tags_all": {
              "Name": "california_nat"
            }
          },
          "dependencies": [
            "aws_eip.california_nat",
            "aws_internet_gateway.california_igw",
            "aws_subnet.california-b-public",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hong-kong_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092cde07880195972",
            "association_id": "eipassoc-0ab783c29b7e0dc65",
            "connectivity_type": "public",
            "id": "nat-0fcaa7486e7a3db65",
            "network_interface_id": "eni-0f01359c42ce5d96c",
            "private_ip": "172.23.1.105",
            "public_ip": "16.163.246.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07ad338463f3aee6f",
            "tags": {
              "Name": "hong-kong_nat"
            },
            "tags_all": {
              "Name": "hong-kong_nat"
            }
          },
          "dependencies": [
            "aws_eip.hong-kong_nat",
            "aws_internet_gateway.hong-kong_igw",
            "aws_subnet.hong-kong-a-public",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "london_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e47f36bfeec263ff",
            "association_id": "eipassoc-0ebc4cff9239e1495",
            "connectivity_type": "public",
            "id": "nat-00bca9a9de040b887",
            "network_interface_id": "eni-026260ec6eceeba14",
            "private_ip": "172.20.1.39",
            "public_ip": "3.9.250.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03de3a162ad38970a",
            "tags": {
              "Name": "london_nat"
            },
            "tags_all": {
              "Name": "london_nat"
            }
          },
          "dependencies": [
            "aws_eip.london_nat",
            "aws_internet_gateway.london_igw",
            "aws_subnet.london-a-public",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "new-york_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b641bba3385858d7",
            "association_id": "eipassoc-0f3b694ebac9be149",
            "connectivity_type": "public",
            "id": "nat-0b95de28694382220",
            "network_interface_id": "eni-03efffa948ecdb1ff",
            "private_ip": "172.19.1.108",
            "public_ip": "3.227.218.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0be2d4d7d9490b2",
            "tags": {
              "Name": "new-york_nat"
            },
            "tags_all": {
              "Name": "new-york_nat"
            }
          },
          "dependencies": [
            "aws_eip.new-york_nat",
            "aws_internet_gateway.new-york_igw",
            "aws_subnet.new-york-a-public",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sao-paulo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f995a55edc62879",
            "association_id": "eipassoc-082e83d0810ae96c8",
            "connectivity_type": "public",
            "id": "nat-08543c4633400f285",
            "network_interface_id": "eni-0909b3e8ec33f90f4",
            "private_ip": "172.21.1.146",
            "public_ip": "56.124.7.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d2ced169fdd081b",
            "tags": {
              "Name": "sao-paulo_nat"
            },
            "tags_all": {
              "Name": "sao-paulo_nat"
            }
          },
          "dependencies": [
            "aws_eip.sao-paulo_nat",
            "aws_internet_gateway.sao-paulo_igw",
            "aws_subnet.sao-paulo-a-public",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d017bbd30085d1f6",
            "association_id": "eipassoc-086402e3a852eadf4",
            "connectivity_type": "public",
            "id": "nat-0573a7497bdd017e7",
            "network_interface_id": "eni-0668e0c9d2f110cac",
            "private_ip": "172.18.1.245",
            "public_ip": "57.181.237.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07082a58990d96456",
            "tags": {
              "Name": "tokyo_nat"
            },
            "tags_all": {
              "Name": "tokyo_nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyo_nat",
            "aws_internet_gateway.tokyo_igw",
            "aws_subnet.tokyo-subnet-a-public",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:route-table/rtb-0c1167897110fe1b2",
            "id": "rtb-0c1167897110fe1b2",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d87fa85eb4710f64",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "australia-private"
            },
            "tags_all": {
              "Name": "australia-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.australia_nat",
            "aws_internet_gateway.australia_igw",
            "aws_nat_gateway.australia_nat",
            "aws_subnet.australia-a-public",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:route-table/rtb-053ea167d9aca8db9",
            "id": "rtb-053ea167d9aca8db9",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b91a306060bc6999",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "australia-public"
            },
            "tags_all": {
              "Name": "australia-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.australia_igw",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:route-table/rtb-092d8a81ab96add1c",
            "id": "rtb-092d8a81ab96add1c",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2f400c4f875e551",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "california-private"
            },
            "tags_all": {
              "Name": "california-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.california_nat",
            "aws_internet_gateway.california_igw",
            "aws_nat_gateway.california_nat",
            "aws_subnet.california-b-public",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:route-table/rtb-0eefd402cd75ba596",
            "id": "rtb-0eefd402cd75ba596",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0049deb8f081e878a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "california-public"
            },
            "tags_all": {
              "Name": "california-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.california_igw",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hong-kong-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:route-table/rtb-0bcd6cc4b7263f218",
            "id": "rtb-0bcd6cc4b7263f218",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fcaa7486e7a3db65",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hong-kong-private"
            },
            "tags_all": {
              "Name": "hong-kong-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hong-kong_nat",
            "aws_internet_gateway.hong-kong_igw",
            "aws_nat_gateway.hong-kong_nat",
            "aws_subnet.hong-kong-a-public",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hong-kong-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:route-table/rtb-03901ccda1283a829",
            "id": "rtb-03901ccda1283a829",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005440183ba85d06e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hong-kong-public"
            },
            "tags_all": {
              "Name": "hong-kong-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hong-kong_igw",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:route-table/rtb-013a40fb7bc68e4ca",
            "id": "rtb-013a40fb7bc68e4ca",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00bca9a9de040b887",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "london-private"
            },
            "tags_all": {
              "Name": "london-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.london_nat",
            "aws_internet_gateway.london_igw",
            "aws_nat_gateway.london_nat",
            "aws_subnet.london-a-public",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:route-table/rtb-066e6e1b9d499f34f",
            "id": "rtb-066e6e1b9d499f34f",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0359f22590e7dff83",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "london-public"
            },
            "tags_all": {
              "Name": "london-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.london_igw",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-york-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:route-table/rtb-09cbc85eb454b6543",
            "id": "rtb-09cbc85eb454b6543",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b95de28694382220",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "new-york-private"
            },
            "tags_all": {
              "Name": "new-york-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.new-york_nat",
            "aws_internet_gateway.new-york_igw",
            "aws_nat_gateway.new-york_nat",
            "aws_subnet.new-york-a-public",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-york-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:route-table/rtb-0ea2025bd8df1bfc4",
            "id": "rtb-0ea2025bd8df1bfc4",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0543af233edcd3d6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "new-york-public"
            },
            "tags_all": {
              "Name": "new-york-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-york_igw",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sao-paulo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:route-table/rtb-02dc235f443732729",
            "id": "rtb-02dc235f443732729",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08543c4633400f285",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sao-paulo-private"
            },
            "tags_all": {
              "Name": "sao-paulo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sao-paulo_nat",
            "aws_internet_gateway.sao-paulo_igw",
            "aws_nat_gateway.sao-paulo_nat",
            "aws_subnet.sao-paulo-a-public",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sao-paulo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:route-table/rtb-0fa830bdf47ea6287",
            "id": "rtb-0fa830bdf47ea6287",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006a392c57468cad7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sao-paulo-public"
            },
            "tags_all": {
              "Name": "sao-paulo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sao-paulo_igw",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-070210bb24f32e3c5",
            "id": "rtb-070210bb24f32e3c5",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0573a7497bdd017e7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-private"
            },
            "tags_all": {
              "Name": "tokyo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyo_nat",
            "aws_internet_gateway.tokyo_igw",
            "aws_nat_gateway.tokyo_nat",
            "aws_subnet.tokyo-subnet-a-public",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-04d13ad20025877d4",
            "id": "rtb-04d13ad20025877d4",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e54b3535b1f83f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-public"
            },
            "tags_all": {
              "Name": "tokyo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyo_igw",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0013791b5dedcb74e",
            "route_table_id": "rtb-0c1167897110fe1b2",
            "subnet_id": "subnet-09846ff8fb17dc07e"
          },
          "dependencies": [
            "aws_eip.australia_nat",
            "aws_internet_gateway.australia_igw",
            "aws_nat_gateway.australia_nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-a-private",
            "aws_subnet.australia-a-public",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0013791b5dedcb74e",
            "route_table_id": "rtb-0c1167897110fe1b2",
            "subnet_id": "subnet-09846ff8fb17dc07e"
          },
          "dependencies": [
            "aws_eip.australia_nat",
            "aws_internet_gateway.australia_igw",
            "aws_nat_gateway.australia_nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-a-private",
            "aws_subnet.australia-a-public",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f00ee381a531a23",
            "route_table_id": "rtb-053ea167d9aca8db9",
            "subnet_id": "subnet-01ca3413a5cbf7b0a"
          },
          "dependencies": [
            "aws_internet_gateway.australia_igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-a-public",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093e8555a9fae5a6d",
            "route_table_id": "rtb-053ea167d9aca8db9",
            "subnet_id": "subnet-07f1abab5e7c10fd5"
          },
          "dependencies": [
            "aws_internet_gateway.australia_igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-b-public",
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046e1ee37dc404d2f",
            "route_table_id": "rtb-092d8a81ab96add1c",
            "subnet_id": "subnet-0c6433aff9669c62c"
          },
          "dependencies": [
            "aws_eip.california_nat",
            "aws_internet_gateway.california_igw",
            "aws_nat_gateway.california_nat",
            "aws_route_table.california-private",
            "aws_subnet.california-b-private",
            "aws_subnet.california-b-public",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046e1ee37dc404d2f",
            "route_table_id": "rtb-092d8a81ab96add1c",
            "subnet_id": "subnet-0c6433aff9669c62c"
          },
          "dependencies": [
            "aws_eip.california_nat",
            "aws_internet_gateway.california_igw",
            "aws_nat_gateway.california_nat",
            "aws_route_table.california-private",
            "aws_subnet.california-b-private",
            "aws_subnet.california-b-public",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07383acb75872a25c",
            "route_table_id": "rtb-0eefd402cd75ba596",
            "subnet_id": "subnet-021b3627755c945be"
          },
          "dependencies": [
            "aws_internet_gateway.california_igw",
            "aws_route_table.california-public",
            "aws_subnet.california-b-public",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07383acb75872a25c",
            "route_table_id": "rtb-0eefd402cd75ba596",
            "subnet_id": "subnet-021b3627755c945be"
          },
          "dependencies": [
            "aws_internet_gateway.california_igw",
            "aws_route_table.california-public",
            "aws_subnet.california-b-public",
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024a7430714defdb7",
            "route_table_id": "rtb-0bcd6cc4b7263f218",
            "subnet_id": "subnet-0ee70af59a2a5136e"
          },
          "dependencies": [
            "aws_eip.hong-kong_nat",
            "aws_internet_gateway.hong-kong_igw",
            "aws_nat_gateway.hong-kong_nat",
            "aws_route_table.hong-kong-private",
            "aws_subnet.hong-kong-a-private",
            "aws_subnet.hong-kong-a-public",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6c1f14c35775df8",
            "route_table_id": "rtb-0bcd6cc4b7263f218",
            "subnet_id": "subnet-0b5f76d03418dde65"
          },
          "dependencies": [
            "aws_eip.hong-kong_nat",
            "aws_internet_gateway.hong-kong_igw",
            "aws_nat_gateway.hong-kong_nat",
            "aws_route_table.hong-kong-private",
            "aws_subnet.hong-kong-a-public",
            "aws_subnet.hong-kong-b-private",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0df86937ef48d8",
            "route_table_id": "rtb-03901ccda1283a829",
            "subnet_id": "subnet-07ad338463f3aee6f"
          },
          "dependencies": [
            "aws_internet_gateway.hong-kong_igw",
            "aws_route_table.hong-kong-public",
            "aws_subnet.hong-kong-a-public",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec8f8fc82c7c3fb",
            "route_table_id": "rtb-03901ccda1283a829",
            "subnet_id": "subnet-08b468ab78f7de8dc"
          },
          "dependencies": [
            "aws_internet_gateway.hong-kong_igw",
            "aws_route_table.hong-kong-public",
            "aws_subnet.hong-kong-b-public",
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3f39901f092eefb",
            "route_table_id": "rtb-013a40fb7bc68e4ca",
            "subnet_id": "subnet-0a357360f97e2e350"
          },
          "dependencies": [
            "aws_eip.london_nat",
            "aws_internet_gateway.london_igw",
            "aws_nat_gateway.london_nat",
            "aws_route_table.london-private",
            "aws_subnet.london-a-private",
            "aws_subnet.london-a-public",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e704cd7ff8fde4c",
            "route_table_id": "rtb-013a40fb7bc68e4ca",
            "subnet_id": "subnet-0972d819a843ba3c3"
          },
          "dependencies": [
            "aws_eip.london_nat",
            "aws_internet_gateway.london_igw",
            "aws_nat_gateway.london_nat",
            "aws_route_table.london-private",
            "aws_subnet.london-a-public",
            "aws_subnet.london-b-private",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e27a6dfc83b0725f",
            "route_table_id": "rtb-066e6e1b9d499f34f",
            "subnet_id": "subnet-03de3a162ad38970a"
          },
          "dependencies": [
            "aws_internet_gateway.london_igw",
            "aws_route_table.london-public",
            "aws_subnet.london-a-public",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69be8adfc3669c4",
            "route_table_id": "rtb-066e6e1b9d499f34f",
            "subnet_id": "subnet-098312ef26f95b438"
          },
          "dependencies": [
            "aws_internet_gateway.london_igw",
            "aws_route_table.london-public",
            "aws_subnet.london-b-public",
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-york-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06126971ea002280b",
            "route_table_id": "rtb-09cbc85eb454b6543",
            "subnet_id": "subnet-03da4026776297381"
          },
          "dependencies": [
            "aws_eip.new-york_nat",
            "aws_internet_gateway.new-york_igw",
            "aws_nat_gateway.new-york_nat",
            "aws_route_table.new-york-private",
            "aws_subnet.new-york-a-private",
            "aws_subnet.new-york-a-public",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-york-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035d0aa4531febad2",
            "route_table_id": "rtb-09cbc85eb454b6543",
            "subnet_id": "subnet-09b41d76afae77066"
          },
          "dependencies": [
            "aws_eip.new-york_nat",
            "aws_internet_gateway.new-york_igw",
            "aws_nat_gateway.new-york_nat",
            "aws_route_table.new-york-private",
            "aws_subnet.new-york-a-public",
            "aws_subnet.new-york-b-private",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-york-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d6da872cb13d3f9",
            "route_table_id": "rtb-0ea2025bd8df1bfc4",
            "subnet_id": "subnet-0d0be2d4d7d9490b2"
          },
          "dependencies": [
            "aws_internet_gateway.new-york_igw",
            "aws_route_table.new-york-public",
            "aws_subnet.new-york-a-public",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-york-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0371ffc554e9ebf6a",
            "route_table_id": "rtb-0ea2025bd8df1bfc4",
            "subnet_id": "subnet-02d420ba7028b9233"
          },
          "dependencies": [
            "aws_internet_gateway.new-york_igw",
            "aws_route_table.new-york-public",
            "aws_subnet.new-york-b-public",
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ca2363f65a5cb3",
            "route_table_id": "rtb-02dc235f443732729",
            "subnet_id": "subnet-013868b41224c60d9"
          },
          "dependencies": [
            "aws_eip.sao-paulo_nat",
            "aws_internet_gateway.sao-paulo_igw",
            "aws_nat_gateway.sao-paulo_nat",
            "aws_route_table.sao-paulo-private",
            "aws_subnet.sao-paulo-a-private",
            "aws_subnet.sao-paulo-a-public",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d5aa3954db94cf5",
            "route_table_id": "rtb-02dc235f443732729",
            "subnet_id": "subnet-009bd8dfe1a6da6d6"
          },
          "dependencies": [
            "aws_eip.sao-paulo_nat",
            "aws_internet_gateway.sao-paulo_igw",
            "aws_nat_gateway.sao-paulo_nat",
            "aws_route_table.sao-paulo-private",
            "aws_subnet.sao-paulo-a-public",
            "aws_subnet.sao-paulo-c-private",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ef533a659b816a6",
            "route_table_id": "rtb-0fa830bdf47ea6287",
            "subnet_id": "subnet-04d2ced169fdd081b"
          },
          "dependencies": [
            "aws_internet_gateway.sao-paulo_igw",
            "aws_route_table.sao-paulo-public",
            "aws_subnet.sao-paulo-a-public",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a4c2fb2dfdad23",
            "route_table_id": "rtb-0fa830bdf47ea6287",
            "subnet_id": "subnet-0699bc48f543162ee"
          },
          "dependencies": [
            "aws_internet_gateway.sao-paulo_igw",
            "aws_route_table.sao-paulo-public",
            "aws_subnet.sao-paulo-c-public",
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060602dbed1e23687",
            "route_table_id": "rtb-070210bb24f32e3c5",
            "subnet_id": "subnet-08f55b772d45d2be2"
          },
          "dependencies": [
            "aws_eip.tokyo_nat",
            "aws_internet_gateway.tokyo_igw",
            "aws_nat_gateway.tokyo_nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-a-private",
            "aws_subnet.tokyo-subnet-a-public",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e69dc1eac7b0b2a",
            "route_table_id": "rtb-070210bb24f32e3c5",
            "subnet_id": "subnet-0c52d1526e31c9056"
          },
          "dependencies": [
            "aws_eip.tokyo_nat",
            "aws_internet_gateway.tokyo_igw",
            "aws_nat_gateway.tokyo_nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-d-private",
            "aws_subnet.tokyo-subnet-a-public",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf03402366166762",
            "route_table_id": "rtb-04d13ad20025877d4",
            "subnet_id": "subnet-07082a58990d96456"
          },
          "dependencies": [
            "aws_internet_gateway.tokyo_igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-subnet-a-public",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09275f44aaa04ed8b",
            "route_table_id": "rtb-04d13ad20025877d4",
            "subnet_id": "subnet-007da241f49fdc87a"
          },
          "dependencies": [
            "aws_internet_gateway.tokyo_igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-d-public",
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-09846ff8fb17dc07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09846ff8fb17dc07e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "australia-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "australia-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "dependencies": [
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-01ca3413a5cbf7b0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca3413a5cbf7b0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "australia-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "australia-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "dependencies": [
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-031c7140f30d43ac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031c7140f30d43ac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "australia-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "australia-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "dependencies": [
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-07f1abab5e7c10fd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f1abab5e7c10fd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "australia-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "australia-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0a379984c1df14c18"
          },
          "dependencies": [
            "aws_vpc.australia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0c6433aff9669c62c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6433aff9669c62c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "california-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "dependencies": [
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-021b3627755c945be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021b3627755c945be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "california-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "dependencies": [
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-c-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0ec275826e39cfb97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec275826e39cfb97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "california-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "dependencies": [
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-c-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-06abe78a9dc57ed6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06abe78a9dc57ed6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-c-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "california-c-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0b5db94da5dde87d1"
          },
          "dependencies": [
            "aws_vpc.california"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hong-kong-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-0ee70af59a2a5136e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee70af59a2a5136e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hong-kong-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "hong-kong-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "dependencies": [
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hong-kong-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-07ad338463f3aee6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ad338463f3aee6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hong-kong-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "hong-kong-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "dependencies": [
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hong-kong-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-0b5f76d03418dde65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5f76d03418dde65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hong-kong-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "hong-kong-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "dependencies": [
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hong-kong-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-08b468ab78f7de8dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b468ab78f7de8dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hong-kong-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "hong-kong-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-025aa59767a181f52"
          },
          "dependencies": [
            "aws_vpc.hong-kong"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0a357360f97e2e350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a357360f97e2e350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "london-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "dependencies": [
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-03de3a162ad38970a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03de3a162ad38970a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "london-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "dependencies": [
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0972d819a843ba3c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0972d819a843ba3c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "london-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "dependencies": [
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-098312ef26f95b438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098312ef26f95b438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "london-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02678a5f7f20049c8"
          },
          "dependencies": [
            "aws_vpc.london"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-york-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-03da4026776297381",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03da4026776297381",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "new-york-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "dependencies": [
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-york-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-0d0be2d4d7d9490b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0be2d4d7d9490b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "new-york-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "dependencies": [
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-york-b-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-09b41d76afae77066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b41d76afae77066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "new-york-b-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "dependencies": [
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new-york-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-02d420ba7028b9233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d420ba7028b9233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "new-york-b-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0bf9490dfe2c5ff12"
          },
          "dependencies": [
            "aws_vpc.new-york"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sao-paulo-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-013868b41224c60d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013868b41224c60d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sao-paulo-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "dependencies": [
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sao-paulo-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-04d2ced169fdd081b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2ced169fdd081b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sao-paulo-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "dependencies": [
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sao-paulo-c-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-009bd8dfe1a6da6d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009bd8dfe1a6da6d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sao-paulo-c-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-c-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "dependencies": [
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sao-paulo-c-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-0699bc48f543162ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0699bc48f543162ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sao-paulo-c-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-c-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-0d810fff5fd897bd7"
          },
          "dependencies": [
            "aws_vpc.sao-paulo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-08f55b772d45d2be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f55b772d45d2be2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "tokyo-a-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "dependencies": [
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-d-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-0c52d1526e31c9056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c52d1526e31c9056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-d-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "tokyo-d-private",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "dependencies": [
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-d-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-007da241f49fdc87a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007da241f49fdc87a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-d-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "tokyo-d-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "dependencies": [
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-subnet-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-07082a58990d96456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07082a58990d96456",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "tokyo-a-public",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "vpc_id": "vpc-02caa1e4e8c5c903e"
          },
          "dependencies": [
            "aws_vpc.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "australia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:vpc/vpc-0a379984c1df14c18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-03a4332dea05d58b8",
            "default_route_table_id": "rtb-04ad94f1e82e3ccad",
            "default_security_group_id": "sg-02c7642e1dec84ac1",
            "dhcp_options_id": "dopt-02760a403b66894c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a379984c1df14c18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ad94f1e82e3ccad",
            "owner_id": "495599735872",
            "tags": {
              "Name": "australia",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "australia",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:vpc/vpc-0b5db94da5dde87d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/16",
            "default_network_acl_id": "acl-0cebebb9998072fff",
            "default_route_table_id": "rtb-0bfa26ed86f92033c",
            "default_security_group_id": "sg-06a5bd057b7458ab8",
            "dhcp_options_id": "dopt-07e622ac9bd3f5e40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5db94da5dde87d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfa26ed86f92033c",
            "owner_id": "495599735872",
            "tags": {
              "Name": "california",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "california",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hong-kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:vpc/vpc-025aa59767a181f52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.23.0.0/16",
            "default_network_acl_id": "acl-09cdb21b6ccc6fd3f",
            "default_route_table_id": "rtb-079e71f9f080401ef",
            "default_security_group_id": "sg-01238d700ea55ac99",
            "dhcp_options_id": "dopt-0f85db491eeb22e8e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025aa59767a181f52",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079e71f9f080401ef",
            "owner_id": "495599735872",
            "tags": {
              "Name": "hong-kong",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "hong-kong",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:vpc/vpc-02678a5f7f20049c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-05b2eeb7eb23dca74",
            "default_route_table_id": "rtb-0ff59a39479eeef70",
            "default_security_group_id": "sg-04474cf07c1e59545",
            "dhcp_options_id": "dopt-0b7e43e752b1abf33",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02678a5f7f20049c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff59a39479eeef70",
            "owner_id": "495599735872",
            "tags": {
              "Name": "london",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "london",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-york",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:vpc/vpc-0bf9490dfe2c5ff12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-042ec6814e779ca34",
            "default_route_table_id": "rtb-0f5544bf770c21217",
            "default_security_group_id": "sg-03a34fa7a049fc05d",
            "dhcp_options_id": "dopt-068cedb6b46f1ecf5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf9490dfe2c5ff12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5544bf770c21217",
            "owner_id": "495599735872",
            "tags": {
              "Name": "new-york",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "new-york",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sao-paulo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:vpc/vpc-0d810fff5fd897bd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-026972ba593965ad1",
            "default_route_table_id": "rtb-06991fe4d6d5cc4b0",
            "default_security_group_id": "sg-05eb1b7d32627e94f",
            "dhcp_options_id": "dopt-0db4a8e8302520b79",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d810fff5fd897bd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06991fe4d6d5cc4b0",
            "owner_id": "495599735872",
            "tags": {
              "Name": "sao-paulo",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:vpc/vpc-02caa1e4e8c5c903e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-00034499c3f3d06d7",
            "default_route_table_id": "rtb-0acf1296438e6982c",
            "default_security_group_id": "sg-0a2827b201afba2ef",
            "dhcp_options_id": "dopt-0a6b10ece991cf8de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02caa1e4e8c5c903e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acf1296438e6982c",
            "owner_id": "495599735872",
            "tags": {
              "Name": "tokyo",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            },
            "tags_all": {
              "Name": "tokyo",
              "Owner": "Mattress Avengers",
              "Service": "armageddon phase 1"
            }
          }
        }
      ]
    }
  ]
}